workloads/fb-crud/back-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fb-crud-back
  labels:
    role: backend
    app: back
spec:
  replicas: 1
  selector:
    matchLabels:
      role: backend
      app: back
  template:
    metadata:
      labels:
        role: backend
        app: back
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: back
          image: "mcr.microsoft.com/oss/bitnami/redis:6.0.8"
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 6379
            name: redis
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
