workloads/fb-crud/back-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fb-crud-back
  labels:
    role: backend
    app: back
spec:
  type: ClusterIP
  ports:
    - port: 6379
  selector:
    role: backend
    app: back
